Add column Use_case in Table Product
